[연결 후 장바구니 수정중]

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ code {
 }
 
 .app {
-  flex-direction: column;
+  flex-direction: row;
   display: flex;
   justify-content: center;
   align-items: center;
